# viber-tui

./: AGENTS.md  CHEATSHEET.md  Cargo.toml  DEVELOPMENT_BLUEPRINT.md  ROADMAP.md  SESSION_INIT.md  TOOL_UTILIZATION_MAP.md  requirements.txt  session-ses_48b3.json  session-ses_48b3.md  workflow_idea.md
.beads/: last-touched
.claude/: settings.json
.claude/rules/: project-conventions.md  rust-patterns.md  tool-matrix.mdc
data/: actions.yaml
docs/: ARCHITECTURE.md
openspec/: project.md
roadmap/: roadmap.archive.2026-01-01T05-48-55-469Z.md  roadmap.archive.2026-01-02T06-04-43-901Z.md  roadmap.md
src/: app.rs  events.rs  execute.rs  main.rs  render.rs
src/agents/: dispatch.rs  intervention.rs  mod.rs  models.rs  pool.rs  protocol.rs  registry.rs  undo.rs
src/data/: actions.rs  mod.rs
src/data/actions/: mod.rs  models.rs  registry.rs
src/events/: keybindings.rs  mod.rs
src/integrations/: beads.rs  mcp.rs  memcord.rs  mod.rs  nvim.rs  nvim_mcp.rs
src/render/: cache.rs  mod.rs
src/theme/: animation.rs  colors.rs  indicators.rs  mod.rs  spinners.rs  styles.rs
src/views/: help.rs  launcher.rs  mod.rs
src/views/agents/: mod.rs  render.rs  state.rs  widget.rs
src/views/buffer/: language.rs  list_state.rs  list_widget.rs  mod.rs  nvim.rs  render.rs  state.rs  widget.rs
src/views/chat/: mod.rs  render.rs  state.rs  widget.rs
src/views/diff/: mod.rs  render.rs  state.rs  widget.rs
src/views/launcher/: mod.rs  preview.rs  render.rs  widget.rs
src/views/lsp/: mod.rs  models.rs  render.rs  (+2 more)
src/widgets/: action_card.rs  fuzzy_list.rs  mod.rs
(+75 files in other folders)
