[package]
name = "viber-tui"
version = "0.1.0"
edition = "2021"
description = "Cyberpunk terminal interface for vibe-coding"
authors = ["VIBER"]
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
nucleo = "0.5"
unicode-width = "0.2"
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"
